# gondar-shell

./: .gitignore  index.html  package.json  pnpm-lock.yaml  pwd.json  run.txt
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
