[package]
name = "tauri-app"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.0", features = ["default"] }
portable-pty = "0.9"
russh = { version = "0.50.0-beta.7", default-features = false, features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
